working change password controller

--- a/app/views/dashboard/change_password.html.erb
+++ b/app/views/dashboard/change_password.html.erb
@@ -1,1 +1,37 @@
-change password. comming soon!
+<div class="content_box">
+    <h4 class="header">تغییر گذرواژه</h4>
+    <div class="form">
+        <%= form_with url: {:action => :submit_change_password}, method: :post do |f|%>
+            <div class="input" style="margin-right: 5px;">
+                <%= f.label :full_name, 'گذرواژه فعلی' %>
+                <%= f.text_field :old_password %>
+            </div>
+            <div class="flex_row">
+                <div class="input" style="margin-right: 5px;">
+                    <%= f.label :full_name, 'تکرار گذرواژه جدید' %>
+                    <%= f.text_field :password_confirm %>                
+                </div>
+                <div class="input" style="margin-left: 5px;">
+                    <%= f.label :full_name, 'گذرواژه جدید' %>
+                    <%= f.text_field :password %>
+                </div>
+            </div>
+
+            <% unless flash[:change_password_errors].nil? %>
+                <% flash[:change_password_errors].each do |e| %>
+                    <div class="form_error_list">
+                        <div class="item"><%= e %></div>
+                    </div>
+                <% end %>
+            <% end %>
+
+            <% unless flash[:change_password_success].nil? %>
+                <span class="success_message"><%= flash[:change_password_success] %></span>
+            <% end %>
+
+            <div style="width: 100%; text-align: left;">
+                <%= f.submit raw("تغییر گذرواژه"), :class => "btn btn-danger btn-large-padding" %>
+            </div>
+        <% end %>
+    </div>
+</div>
