--- a/app/views/layouts/_tags.html.erb
+++ b/app/views/layouts/_tags.html.erb
@@ -4,4 +4,4 @@
 
 <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', 'data-turbolinks-eval': 'false', :defer => 'defer' %>
 <%= javascript_pack_tag 'scripts', 'data-turbolinks-track': 'load', 'data-turbolinks-eval': 'false', :defer => 'defer' %>
-<script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
+<script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
