change password action almost finished

--- a/app/views/dashboard/change_password.html.erb
+++ b/app/views/dashboard/change_password.html.erb
@@ -9,7 +9,7 @@
             <div class="flex_row">
                 <div class="input" style="margin-right: 5px;">
                     <%= f.label :full_name, 'تکرار گذرواژه جدید' %>
-                    <%= f.text_field :password_confirm %>                
+                    <%= f.text_field :password_confirmation %>                
                 </div>
                 <div class="input" style="margin-left: 5px;">
                     <%= f.label :full_name, 'گذرواژه جدید' %>
