persian form errors added to project

--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -19,7 +19,7 @@
 			<div class="input">
 				<%= f.label :email, 'ایمیل' %>
 				<%= f.text_field :email %>
-				<small>ایمیل های مورد قبول: gmail, yahoo, outlook</small>
+				<small>مثال: mr.tahadostifam@gmail.com</small>
 			</div>
 			<div class="input">
 				<%= f.label :username, 'نام کاربری' %>
