--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
                     <div>
                         <% if show_actions %>
                             <%= link_to 'حذف', '/articles/confirm_delete_article/' + @article.slug, :style => 'display: inline-block', :class => 'link link-danger' %>
-                            <a class="link" style="margin-left: 10px; display: inline-block">ویرایش</a>
+                            <%= link_to 'ویرایش', '/dashboard/edit_article/' + @article.slug, :style => 'margin-left: 10px; display: inline-block', :class => 'link' %>
                         <% end %>
                     </div>
                     <div>
