--- a/app/views/dashboard/my_articles.html.erb
+++ b/app/views/dashboard/my_articles.html.erb
@@ -28,6 +28,12 @@
 									</span>
 								</div>
 								<div>
+									<span class="like_icon link-danger" dir="ltr">
+										<span class='icon'>
+											<ion-icon name='heart'></ion-icon>
+										</span>
+										<%= art.likes.length %>
+									</span>
 									<span class='comments_count'>
 										2
 										<span class='icon'>
