--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -142,8 +142,10 @@
 			display: block;
 			text-align: left;
 			direction: ltr;
-			border-radius: 2px;
+			border-radius: 4px;
+			margin: 5px 0;
 		}
+		padding-bottom: 5px;
 	}
 	.like_button, form{
 		display: inline-block;
