--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -225,6 +225,9 @@ small {
 .flex_row{
     display: flex;
     flex: 1 0;
+    div{
+        width: 100%;
+    }
 }
 @media screen and (max-width: 700px) {
     .flex_row {
