--- a/app/views/introduction/about_us.html.erb
+++ b/app/views/introduction/about_us.html.erb
@@ -1,3 +1,7 @@
 <div class="container" style="top: 0px">
     <h2 class="container_title bb">درباره ما</h2>
+
+    <div class="content md_to_html" style="margin: 10px 0;" dir="rtl">
+        <%= @setting.about_us %>
+    </div>
 </div>
