--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -44,8 +44,8 @@
 
                                 <div class="sepa"></div>
 
-                                <%= link_to 'قوانین وبسایت', dashboard_site_settings_url, :class => 'link' %>
-                                <%= link_to 'تنظیمات وبسایت', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'قوانین وبسایت', root_path, :class => 'link' %>
+                                <%= link_to 'تنظیمات وبسایت', dashboard_site_settings_url, :class => 'link' %>
                             <% end %>
                         </div>
                     </div>
