--- a/app/views/layouts/_tags.html.erb
+++ b/app/views/layouts/_tags.html.erb
@@ -1,7 +1,18 @@
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
 <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', 'data-turbolinks-eval': 'false', :defer => 'defer' %>
 <%= javascript_pack_tag 'scripts', 'data-turbolinks-track': 'load', 'data-turbolinks-eval': 'false', :defer => 'defer' %>
 <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script>
+  var _paq = window._paq = window._paq || [];
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="https://devsparkleir.matomo.cloud/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='//cdn.matomo.cloud/devsparkleir.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
