--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -29,13 +29,9 @@
                             <% if @user.is_owner? || @user.is_admin? %>
                                 <%= link_to 'مقاله جدید', dashboard_new_article_url, :class => 'link' %>
                                 <%= link_to 'مقاله های من', dashboard_my_articles_url, :class => 'link' %>
-                                
                                 <div class="sepa"></div>
-
                                 <%= link_to 'آمار کلی', dashboard_general_statistics_url, :class => 'link' %>
-                                <%= link_to 'آمار پر بازدید ترین مقاله ها', dashboard_manage_users_url, :class => 'link' %>
-                                <%= link_to 'آمار پر لایک ترین مقاله ها', dashboard_manage_users_url, :class => 'link' %>
-                                
+                                <%= link_to 'مقالات محبوب', dashboard_manage_users_url, :class => 'link' %>
                             <% end %>
                             <% if @user.is_owner? %>
                                 <div class="sepa"></div>
