--- a/app/views/dashboard/site_settings.html.erb
+++ b/app/views/dashboard/site_settings.html.erb
@@ -6,6 +6,11 @@
                 <%= f.text_area :about_us, :style => 'height: 300px', :rows => 600, :dir => :rtl %>
             </div>
 
+            <div class="input">
+                 <%= f.label :tac, 'قوانین و مقررات' %>
+                <%= f.text_area :tac, :style => 'height: 300px', :rows => 600, :dir => :rtl %>
+            </div>
+
             <div class="checkbox" style="margin-right: 5px; margin-top: 10px;">
                 <%= f.label :can_comment, 'امکان نظر دهی برای مقالات' %>
                 <%= f.check_box :can_comment %>
