--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -31,7 +31,7 @@
                                 <%= link_to 'مقاله های من', dashboard_my_articles_url, :class => 'link' %>
                                 <div class="sepa"></div>
                                 <%= link_to 'آمار کلی', dashboard_general_statistics_url, :class => 'link' %>
-                                <%= link_to 'مقالات محبوب', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'مقالات محبوب', '', :class => 'link' %>
                             <% end %>
                             <% if @user.is_owner? %>
                                 <div class="sepa"></div>
@@ -40,7 +40,6 @@
 
                                 <div class="sepa"></div>
 
-                                <%= link_to 'قوانین وبسایت', root_path, :class => 'link' %>
                                 <%= link_to 'تنظیمات وبسایت', dashboard_site_settings_url, :class => 'link' %>
                             <% end %>
                         </div>
