--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -50,9 +50,11 @@
                     </div>
                 </div>
             </div>
-            <div class='image cover'>
-                <%= image_tag @article.image, :onload => 'imagePreloader(this)' %>
-            </div>
+            <% if @article.image.persisted? %>
+                <div class='image cover'>
+                    <%= image_tag @article.image, :onload => 'imagePreloader(this)' %>
+                </div>
+            <% end %>
             <div class="content md_to_html" style="margin: 10px 0;" dir="rtl">
                 <%= @article.content %>
             </div>
