--- a/app/views/dashboard/change_password.html.erb
+++ b/app/views/dashboard/change_password.html.erb
@@ -4,16 +4,16 @@
         <%= form_with url: {:action => :submit_change_password}, method: :post do |f|%>
             <div class="input" style="margin-right: 5px;">
                 <%= f.label :full_name, 'گذرواژه فعلی' %>
-                <%= f.text_field :old_password %>
+                <%= f.password_field :old_password %>
             </div>
             <div class="flex_row">
                 <div class="input" style="margin-right: 5px;">
                     <%= f.label :full_name, 'تکرار گذرواژه جدید' %>
-                    <%= f.text_field :password_confirmation %>                
+                    <%= f.password_field :password_confirmation %>                
                 </div>
                 <div class="input" style="margin-left: 5px;">
                     <%= f.label :full_name, 'گذرواژه جدید' %>
-                    <%= f.text_field :password %>
+                    <%= f.password_field :password %>
                 </div>
             </div>
 
