--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -53,4 +53,22 @@
 			}	
 		}
 	}
+	&.btn-success{
+		background: rgb(6, 165, 46);
+		color: #fff;
+		&:active{
+			background: rgb(4, 121, 33);
+		}
+		&.btn-mute{
+			&:hover, &:focus, &.active {
+				background: rgb(6, 212, 58);
+				color: #fff;
+			}	
+		}
+	}
+}
+.btn-none{
+	background: transparent;
+	border: none;
+	color: #777;
 }
