--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -2,10 +2,10 @@
 	<% unless flash[:success_signup].present? && flash[:success_signup] %>
 		<%= form_with model: @user, url: { :action => "submit_signup" }, method: :post do |f| %>
 			<div style="display: flex; justify-content: space-between; width: 100%; height: 42px; margin-top: 12px;">
-				<div class="btn btn-primary">
+				<a href='/users/signup_with_github/<%= github_clientid %>' class="btn btn-primary">
 					<ion-icon  style="font-size: 18px; margin-top: 2px;" name="logo-github"></ion-icon>
 					<span style="position: relative; top: -3px;">Github</span>
-				</div>
+				</a>
 				<div>
 					<h3 class="form_title">ثبت نام</h3>
 				</div>
