working on complete_signup_with_github

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -27,6 +27,9 @@ body {
         &.link-danger{
             color: rgb(255, 11, 11);
         }
+        &.link-general{
+            color: #003cff;
+        }
     }
 }
 .turbolinks-progress-bar {
