--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,15 @@
                         <% if show_actions %>
                             <%= link_to 'حذف', '/articles/confirm_delete_article/' + @article.slug, :style => 'display: inline-block', :class => 'link link-danger' %>
                             <%= link_to 'ویرایش', '/dashboard/edit_article/' + @article.slug, :style => 'margin-left: 10px; display: inline-block', :class => 'link' %>
+                            <% if session[:user][:is_owner] && @article.published == false %>
+                                <div style="margin-left: 10px; display: inline-block; position: relative; top:1px">
+                                    <%= form_with url: { :controller => :dashboard, :action => :submit_articles_that_not_verified } do |f| %>
+                                        <%= f.hidden_field :slug, :value => @article.slug %>
+                                        <%= f.hidden_field :next_page, :value => '/articles/show/'+@article.slug %>
+                                        <%= f.submit 'تایید مقاله', :class => 'link btn-none' %>
+                                    <% end %>
+                                </div>
+                            <% end %>
                         <% end %>
                     </div>
                     <div>
