--- a/app/views/dashboard/general_statistics.html.erb
+++ b/app/views/dashboard/general_statistics.html.erb
@@ -89,7 +89,7 @@
                 تعداد کامنت ها
             </h4>
             <span class="value">
-                0
+                <%= @comments.length %>
             </span>
         </div>
     </div>
