--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -194,6 +194,7 @@
 		}
 	}
 	.comment{
+		margin-bottom: 30px;
 		position: relative;
 		width: 100%;
 		background: #fff;
@@ -207,7 +208,7 @@
 		color: #000;
 		.sender{
 			position: absolute;
-			top: -13px;
+			top: -11px;
 			right: 10px;
 			padding: 0 3px;
 			font-size: 16px;
