--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,6 +1,6 @@
 <div class="form center_form">
 	<% unless flash[:success_signup].present? && flash[:success_signup] %>
-		<%= form_with model: @user, url: { :action => "submit_signup" }, method: :post do |f| %>
+		<%= form_with model: @user, url: { :action => :submit_signup }, method: :post do |f| %>
 			<div style="display: flex; justify-content: space-between; width: 100%; height: 42px; margin-top: 12px;">
 				<a href='/users/signup_with_github/<%= github_clientid %>' class="btn btn-primary">
 					<ion-icon  style="font-size: 18px; margin-top: 2px;" name="logo-github"></ion-icon>
