--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -29,7 +29,7 @@
 										<%= art.likes.length %>
 									</span>
 									<span class='comments_count'>
-										2
+										<%= art.comments.length %>
 										<span class='icon'>
 											<ion-icon name='chatbubble-outline'></ion-icon>
 										</span>
