--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,7 +22,7 @@
 <% else %>
     <div class="input fileupload">
         <%= f.label :image, 'عکس', :style => 'display: block; width: 100%;' %>
-        <div style="position: relative; margin-top: 16px; right: -6px">
+        <div style="position: relative; margin-top: 16px; right: -6px;">
             <%= f.label :image, 'انتخاب عکس', :class => 'btn btn-primary', :style => 'width: 100%; padding: 10px; text-align: center;' %>
             <%= f.file_field :image, accept: 'image/png,image/jpg,image/jpeg',:style => 'display: none' %>
         </div>
